--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malla interactiva - Ingeniería en Informática</title>
+    <title>Malla Curricular - Ingeniería en Informática</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Malla interactiva de Ingeniería en Informática</h1>
-    <p>Bienvenido a la malla interactiva.</p>
+    <div class="container mx-auto px-4 py-8">
+        <header class="text-center mb-12">
+            <h1 class="text-4xl font-bold text-indigo-800 mb-3">Ingeniería en Informática</h1>
+            <p class="text-xl text-gray-600">Malla curricular 2024 - Plan de estudios integral</p>
+            <div class="flex justify-center mt-6 space-x-3">
+                <span class="bg-indigo-100 text-indigo-800 px-4 py-2 rounded-full">10 semestres</span>
+                <span class="bg-green-100 text-green-800 px-4 py-2 rounded-full">400 créditos</span>
+            </div>
+        </header>
+<div class="grid grid-cols-2 md:grid-cols-5 gap-4 mb-6">
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 1</button>
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 2</button>
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 3</button>
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 4</button>
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 5</button>
+            <button class="py-2 px-4 bg-indigo-100 text-indigo-800 rounded hover:bg-indigo-200">Semestre 6</button>
+        </div>
+
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-xl font-bold mb-4 text-indigo-700">Semestre 1</h2>
+            <div class="grid md:grid-cols-2 gap-4">
+                <div class="border p-4 rounded-lg">
+                    <h3 class="font-bold text-lg">Matemáticas I</h3>
+                    <p class="text-gray-600">Cálculo diferencial e integral</p>
+                    <span class="text-sm bg-blue-100 text-blue-800 px-2 py-1 rounded-full mt-2 inline-block">6 créditos</span>
+                </div>
+                <div class="border p-4 rounded-lg">
+                    <h3 class="font-bold text-lg">Programación I</h3>
+                    <p class="text-gray-600">Fundamentos de programación</p>
+                    <span class="text-sm bg-blue-100 text-blue-800 px-2 py-1 rounded-full mt-2 inline-block">6 créditos</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
