--- a/index.html
+++ b/index.html
@@ -2,86 +2,119 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Interactiva - Ingeniería en Informática (UNSL)</title>
+  <title>Malla Interactiva - Ingeniería en Informática 💖</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      font-family: 'Comic Neue', cursive;
+      background: white;
       margin: 20px;
+      color: #444;
     }
 
     h1 {
       text-align: center;
+      color: #c71585;
+    }
+
+    select, option {
+      font-family: inherit;
+    }
+
+    .controls {
+      text-align: center;
+      margin-bottom: 20px;
     }
 
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 1rem;
-      margin-top: 30px;
     }
 
     .card {
-      background: white;
+      background: #ffeef8;
       padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .card:hover {
-      transform: scale(1.03);
+      border-radius: 15px;
+      border: 2px solid #f8c8dc;
+      box-shadow: 0 4px 10px rgba(255, 182, 193, 0.4);
+      position: relative;
     }
 
     .regularizada {
-      background-color: #ffe599;
+      background-color: #fdd9ec;
     }
 
     .aprobada {
-      background-color: #b6d7a8;
+      background-color: #f8a9c4;
     }
 
-    .estado {
-      margin-top: 10px;
-      font-weight: bold;
+    .estado select:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    .locked-msg {
+      font-size: 0.8em;
+      color: #999;
+      margin-top: 5px;
     }
 
     select {
-      margin-top: 5px;
+      width: 100%;
+      padding: 5px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
 
-  <h1>Malla Interactiva - Ingeniería en Informática UNSL</h1>
+  <h1>🌸 Malla Interactiva - Ingeniería en Informática 🌸</h1>
+
+  <div class="controls">
+    <label for="filtro">Filtrar por año:</label>
+    <select id="filtro">
+      <option value="todos">Todos</option>
+      <option value="1">1° Año</option>
+      <option value="2">2° Año</option>
+      <option value="3">3° Año</option>
+      <option value="4">4° Año</option>
+      <option value="5">5° Año</option>
+    </select>
+  </div>
 
   <div class="grid" id="malla"></div>
 
   <script>
     const materias = [
-      { id: 1, nombre: "Introducción al Cálculo", año: 1, cuatri: 1 },
-      { id: 2, nombre: "Álgebra I", año: 1, cuatri: 1 },
-      { id: 3, nombre: "Resolución de Problemas y Algoritmos", año: 1, cuatri: 1 },
-      { id: 4, nombre: "Programación I", año: 1, cuatri: 2 },
-      { id: 5, nombre: "Matemática Discreta", año: 1, cuatri: 2 },
-      { id: 6, nombre: "Cálculo I", año: 1, cuatri: 2 },
-      { id: 7, nombre: "Álgebra II", año: 1, cuatri: 2 },
-      { id: 8, nombre: "Probabilidad y Estadística", año: 2, cuatri: 1 },
-      { id: 9, nombre: "Inglés", año: 2, cuatri: "Anual" },
-      { id: 10, nombre: "Programación II", año: 2, cuatri: 1 },
-      { id: 11, nombre: "Organización y Arquitectura de Computadoras", año: 2, cuatri: 1 },
-      { id: 12, nombre: "Programación III", año: 2, cuatri: 2 },
+      { id: 1, nombre: "Introducción al Cálculo", año: 1, cuatri: 1, correlativas: [] },
+      { id: 2, nombre: "Álgebra I", año: 1, cuatri: 1, correlativas: [] },
+      { id: 3, nombre: "Resolución de Problemas y Algoritmos", año: 1, cuatri: 1, correlativas: [] },
+      { id: 4, nombre: "Programación I", año: 1, cuatri: 2, correlativas: [3] },
+      { id: 5, nombre: "Matemática Discreta", año: 1, cuatri: 2, correlativas: [] },
+      { id: 6, nombre: "Cálculo I", año: 1, cuatri: 2, correlativas: [1] },
+      { id: 7, nombre: "Álgebra II", año: 1, cuatri: 2, correlativas: [2] },
+      { id: 10, nombre: "Programación II", año: 2, cuatri: 1, correlativas: [4] },
+      { id: 11, nombre: "Organización y Arquitectura de Computadoras", año: 2, cuatri: 1, correlativas: [] },
     ];
 
     let estadosGuardados = JSON.parse(localStorage.getItem("estadosMaterias")) || {};
 
+    function correlativasAprobadas(correlativas) {
+      return correlativas.every(id => estadosGuardados[id] === "Aprobada");
+    }
+
     function renderMalla() {
       const mallaDiv = document.getElementById("malla");
+      const filtro = document.getElementById("filtro")?.value || "todos";
       mallaDiv.innerHTML = "";
 
       materias.forEach(mat => {
+        if (filtro !== "todos" && filtro !== String(mat.año)) return;
+
         const estado = estadosGuardados[mat.id] || "";
+        const desbloqueada = correlativasAprobadas(mat.correlativas);
 
         const card = document.createElement("div");
         card.className = "card";
@@ -92,27 +125,30 @@
           <strong>${mat.nombre}</strong><br>
           <small>Año ${mat.año} - Cuat. ${mat.cuatri}</small>
           <div class="estado">
-            <select data-id="${mat.id}">
+            <select data-id="${mat.id}" ${!desbloqueada && estado === "" ? "disabled" : ""}>
               <option value="">Estado</option>
               <option value="Regularizada" ${estado === "Regularizada" ? "selected" : ""}>Regularizada</option>
               <option value="Aprobada" ${estado === "Aprobada" ? "selected" : ""}>Aprobada</option>
             </select>
+            ${!desbloqueada && estado === "" ? `<div class="locked-msg">🔒 Requiere correlativas</div>` : ""}
           </div>
         `;
+
         mallaDiv.appendChild(card);
       });
 
-      // Reasignar eventos después de render
-      document.querySelectorAll("select").forEach(select => {
+      document.querySelectorAll("select[data-id]").forEach(select => {
         select.addEventListener("change", e => {
           const id = e.target.getAttribute("data-id");
           const value = e.target.value;
           estadosGuardados[id] = value;
           localStorage.setItem("estadosMaterias", JSON.stringify(estadosGuardados));
-          renderMalla(); // Actualiza los colores al cambiar estado
+          renderMalla();
         });
       });
     }
+
+    document.getElementById("filtro").addEventListener("change", renderMalla);
 
     renderMalla();
   </script>
