--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Malla Interactiva UNSL - Rosa Pastel Clickable</title>
+<title>Malla Interactiva UNSL - Rosa Pastel</title>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet" />
 <style>
   * {
@@ -32,7 +32,7 @@
     background: #ffe9f1;
     border-radius: 10px;
     padding: 15px;
-    width: 220px;
+    width: 240px;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -49,7 +49,7 @@
     background: #f8cee2;
     border-radius: 6px;
     margin-bottom: 10px;
-    padding: 14px 10px;
+    padding: 14px 12px;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(193, 112, 143, 0.5);
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -63,12 +63,12 @@
     opacity: 0.6;
   }
   .materia.aprobada {
-    background-color: #d6f0e7;
-    border: 2px solid #52a78e;
-    color: #31725f;
+    background-color: #f4c2d7;  /* rosa pastel suave */
+    border: 2px solid #d36f8a;  /* rosa más fuerte */
+    color: #8b3a4a;             /* texto oscuro que contraste */
   }
   .materia.aprobada:hover {
-    background-color: #b8e6d5;
+    background-color: #d88ba3;  /* rosa más oscuro al pasar el mouse */
   }
   .materia:not(.locked):hover {
     background-color: #f0a3c0;
@@ -87,11 +87,11 @@
 </head>
 <body>
 
-<h2>Malla Interactiva UNSL - Rosa Pastel Clickable</h2>
+<h2>Malla Interactiva UNSL - Rosa Pastel</h2>
 
 <div class="malla" id="malla">
 
-  <!-- Año 1 -->
+  <!-- 1er Año -->
   <section class="anio" data-anio="1">
     <h3>1º Año</h3>
 
@@ -101,34 +101,258 @@
       <input type="checkbox" class="aprobar-checkbox" />
     </div>
 
-    <div class="materia locked" data-id="resolucion-problemas" data-correlativas="[]" data-tipo="2" tabindex="0">
-      Resolución de Problemas
+    <div class="materia" data-id="algebra1" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Álgebra I
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" class="aprobar-checkbox" />
+    </div>
+
+    <div class="materia" data-id="resolucion-problemas" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Resolución de Problemas y Algoritmos
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" class="aprobar-checkbox" />
+    </div>
+
+    <div class="materia locked" data-id="programacion1" data-correlativas='["resolucion-problemas"]' data-tipo="2" tabindex="0">
+      Programación I
       <div class="tipo-cuatrimestre">2º</div>
-      <input type="checkbox" class="aprobar-checkbox" disabled />
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="matematica-discreta" data-correlativas="[]" data-tipo="2" tabindex="0">
+      Matemática Discreta
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
     </div>
 
     <div class="materia locked" data-id="calculo1" data-correlativas='["intro-calc"]' data-tipo="2" tabindex="0">
       Cálculo I
       <div class="tipo-cuatrimestre">2º</div>
-      <input type="checkbox" class="aprobar-checkbox" disabled />
+      <input type="checkbox" disabled />
     </div>
 
-    <div class="materia locked" data-id="programacion1" data-correlativas='["resolucion-problemas"]' data-tipo="anual" tabindex="0">
-      Programación I
-      <div class="tipo-cuatrimestre">Anual</div>
-      <input type="checkbox" class="aprobar-checkbox" disabled />
+    <div class="materia locked" data-id="algebra2" data-correlativas='["algebra1"]' data-tipo="2" tabindex="0">
+      Álgebra II
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
     </div>
-
   </section>
 
-  <!-- Año 2 -->
+  <!-- 2do Año -->
   <section class="anio" data-anio="2">
     <h3>2º Año</h3>
+
+    <div class="materia locked" data-id="probabilidad-estadistica" data-correlativas='["calculo1"]' data-tipo="1" tabindex="0">
+      Probabilidad y Estadística
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia" data-id="ingles" data-correlativas="[]" data-tipo="anual" tabindex="0">
+      Inglés
+      <div class="tipo-cuatrimestre">Anual</div>
+      <input type="checkbox" />
+    </div>
 
     <div class="materia locked" data-id="programacion2" data-correlativas='["programacion1"]' data-tipo="1" tabindex="0">
       Programación II
       <div class="tipo-cuatrimestre">1º</div>
-      <input type="checkbox" class="aprobar-checkbox" disabled />
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="org-arquitectura" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Organización y Arquitectura de Computadoras
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="programacion3" data-correlativas='["programacion2"]' data-tipo="2" tabindex="0">
+      Programación III
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="estructuras-datos" data-correlativas='["programacion2"]' data-tipo="2" tabindex="0">
+      Estructuras de Datos y Algoritmos
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="fisica" data-correlativas="[]" data-tipo="anual" tabindex="0">
+      Física
+      <div class="tipo-cuatrimestre">Anual</div>
+      <input type="checkbox" disabled />
+    </div>
+  </section>
+
+  <!-- 3er Año -->
+  <section class="anio" data-anio="3">
+    <h3>3º Año</h3>
+
+    <div class="materia locked" data-id="ingenieria-software1" data-correlativas='["programacion3"]' data-tipo="1" tabindex="0">
+      Ingeniería de Software I
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="etica-legislacion" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Ética y Legislación
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="base-datos" data-correlativas='["programacion3"]' data-tipo="1" tabindex="0">
+      Base de Datos
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="modelos-simulacion" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Modelos y Simulación
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="fundamentos-computacion" data-correlativas='["calculo1"]' data-tipo="1" tabindex="0">
+      Fundamentos de Computación
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="ingenieria-software2" data-correlativas='["ingenieria-software1"]' data-tipo="2" tabindex="0">
+      Ingeniería de Software II
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="laboratorio-tecnologias" data-correlativas='["ingenieria-software1"]' data-tipo="2" tabindex="0">
+      Laboratorio de Tecnologías
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="redes-computadoras" data-correlativas='["fundamentos-computacion"]' data-tipo="2" tabindex="0">
+      Redes de Computadoras
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="sistemas-operativos" data-correlativas='["fundamentos-computacion"]' data-tipo="2" tabindex="0">
+      Sistemas Operativos
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="analisis-numerico" data-correlativas='["calculo1"]' data-tipo="2" tabindex="0">
+      Análisis Numérico
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+  </section>
+
+  <!-- 4to Año -->
+  <section class="anio" data-anio="4">
+    <h3>4º Año</h3>
+
+    <div class="materia locked" data-id="planeamiento-estrategico" data-correlativas='["ingenieria-software2"]' data-tipo="1" tabindex="0">
+      Planeamiento Estratégico de Sistemas de Información
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="sistemas-criticos" data-correlativas='["ingenieria-software2"]' data-tipo="1" tabindex="0">
+      Sistemas Críticos
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="ingenieria-web" data-correlativas='["ingenieria-software2"]' data-tipo="1" tabindex="0">
+      Ingeniería Web
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="teoria-informacion" data-correlativas='["ingenieria-software2"]' data-tipo="1" tabindex="0">
+      Teoría de la Información y la Comunicación
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="calidad-certificacion" data-correlativas='["ingenieria-software2"]' data-tipo="2" tabindex="0">
+      Calidad y Certificación del Proceso y del Producto de Software
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="auditoria-informatica" data-correlativas='["ingenieria-software2"]' data-tipo="2" tabindex="0">
+      Auditoría Informática
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="sistemas-inteligentes" data-correlativas='["ingenieria-software2"]' data-tipo="2" tabindex="0">
+      Sistemas Inteligentes
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="diseno-lenguajes" data-correlativas='["ingenieria-software2"]' data-tipo="2" tabindex="0">
+      Diseño y Paradigmas de Lenguajes
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="seguridad-sistemas" data-correlativas='["ingenieria-software2"]' data-tipo="2" tabindex="0">
+      Seguridad de Sistemas Informáticos
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" disabled />
+    </div>
+  </section>
+
+  <!-- 5to Año -->
+  <section class="anio" data-anio="5">
+    <h3>5º Año</h3>
+
+    <div class="materia locked" data-id="arquitectura-software" data-correlativas='["diseno-lenguajes"]' data-tipo="1" tabindex="0">
+      Arquitectura de Software
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="reingenieria-organizaciones" data-correlativas='["diseno-lenguajes"]' data-tipo="1" tabindex="0">
+      Reingeniería de las Organizaciones y de los Sist. de Información
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia locked" data-id="administracion-evaluacion" data-correlativas='["diseno-lenguajes"]' data-tipo="1" tabindex="0">
+      Administración y Evaluación Financiera de Proyectos Informáticos
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" disabled />
+    </div>
+
+    <div class="materia" data-id="optativa1" data-correlativas="[]" data-tipo="1" tabindex="0">
+      Optativa (Mínimo 75 hs.)
+      <div class="tipo-cuatrimestre">1º</div>
+      <input type="checkbox" />
+    </div>
+
+    <div class="materia" data-id="optativa2" data-correlativas="[]" data-tipo="2" tabindex="0">
+      Optativa (Mínimo 75 hs.)
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" />
+    </div>
+
+    <div class="materia" data-id="practica-profesional" data-correlativas="[]" data-tipo="2" tabindex="0">
+      Práctica Profesional Supervisada
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" />
+    </div>
+
+    <div class="materia" data-id="proyecto-integrador" data-correlativas="[]" data-tipo="2" tabindex="0">
+      Proyecto Integrador
+      <div class="tipo-cuatrimestre">2º</div>
+      <input type="checkbox" />
     </div>
 
   </section>
